Prevented layout shift from scrollbar hdiing

--- a/assets/snippet-menu.css
+++ b/assets/snippet-menu.css
@@ -3,7 +3,7 @@
 }
 
 body.menu-open {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .menu-drawer__container {
